<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


        <CheckBox
            android:id="@+id/check_box"
            style="@android:style/Widget.DeviceDefault.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:buttonTint="?attr/colorError" />

        <TextView
            android:id="@+id/shopping_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/remove_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="4dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="X"
                    android:textColor="@android:color/darker_gray" />

        </RelativeLayout>



</LinearLayout>