...
                android:text="@string/edit_recipe" />


        </LinearLayout>

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:textAlignment="center"
            android:textSize="70sp"
            android:textStyle="bold" />
...
            android:text="@string/ingredients_label"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ingredients_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:paddingLeft="30sp"
            android:text=""
            android:textSize="25sp" />
...
